Fixed little issue in column alignment in horizontal menu.

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css);
 
+/* * { border: 1px solid red; } */
+
 @media all {/* Defaults */
   :root {
     --color-primary-tint-1: #212121;
@@ -103,13 +105,10 @@
 
     list-style: none;
   }
-  ul.horizontal * {
+  ul.horizontal a > * {
     display: flex;
     flex-flow: column;
     align-items: center;
-
-    padding: 0 10%;
-    min-width: .5em;
   }
 }
 
